Fix Version Mobile

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .section{
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     min-height: 100vh;
     display: flex;
     background:linear-gradient(164deg,#2C3355,#6E83C1);
